add angular upload to the controller.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <script src="libs/bootstrap.js"></script>
 <script src="libs/configuration.js"></script>
 <script src="libs/util.js"></script>
-<script src="libs/ui-bootstrap-tpls-0.11.2.js"></script>
+<script src="libs/ui-bootstrap-tpls-0.12.0.min.js"></script>
 
 <script src="scripts/app.js"></script>
 
@@ -70,6 +70,8 @@
 <script src="scripts/main/service/mainService.js"></script>
 <script src="scripts/userFeatures/service/userFeaturesService.js"></script>
 <script src="scripts/imageUpload/service/imageUploadService.js"></script>
+
+<script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
 
 <!-- Page Specific Plugins -->
 </html>
