add file uploader

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 <body>
-<div ng-view style="min-width: 1024px"></div>
+<div ui-view style="min-width: 1024px"></div>
 </body>
 
 <!-- jQuery -->
@@ -54,6 +54,7 @@
 <script src="libs/angular-resource.js"></script>
 <script src="libs/angular-animate.js"></script>
 <script src="libs/angular-route.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="libs/angular-cookies.js"></script>
 <script src="libs/sha256.js"></script>
 <script src="libs/bootstrap.js"></script>
@@ -69,6 +70,7 @@
 
 <script src="scripts/main/service/mainService.js"></script>
 <script src="scripts/userFeatures/service/userFeaturesService.js"></script>
+<script src="scripts/imageUpload/service/imageUploadFactory.js"></script>
 <script src="scripts/imageUpload/service/imageUploadService.js"></script>
 
 <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
