add uploading documents

--- a/index.html
+++ b/index.html
@@ -61,17 +61,21 @@
 <script src="libs/configuration.js"></script>
 <script src="libs/util.js"></script>
 <script src="libs/ui-bootstrap-tpls-0.12.0.min.js"></script>
+<script src="libs/angular-uuid2.min.js"></script>
 
 <script src="scripts/app.js"></script>
 
 <script src="scripts/main/controller/mainCtrl.js"></script>
 <script src="scripts/userFeatures/controller/userFeaturesCtrl.js"></script>
 <script src="scripts/imageUpload/controller/imageUploadCtrl.js"></script>
+<script src="scripts/fileUpload/controller/fileUploadCtrl.js"></script>
 
 <script src="scripts/main/service/mainService.js"></script>
 <script src="scripts/userFeatures/service/userFeaturesService.js"></script>
 <script src="scripts/imageUpload/service/imageUploadFactory.js"></script>
 <script src="scripts/imageUpload/service/imageUploadService.js"></script>
+<script src="scripts/fileUpload/service/fileUploadFactory.js"></script>
+<script src="scripts/fileUpload/service/fileUploadService.js"></script>
 
 <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
 
